Se añade botón que permite eliminar las tareas completadas

--- a/elementos_teoria_computacion/escenario_7/src/index.html
+++ b/elementos_teoria_computacion/escenario_7/src/index.html
@@ -23,6 +23,7 @@
         <section id="completed">
             <h2 class="title">Completadas</h2>
             <section class="task-list"></section>
+            <button onclick="deleteCompleted()">Eliiminar completadas</button>
         </section>
     </section>
     <script src="index.js"></script>
